gitOps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-finalgo
  
spec:
  selector:
    matchLabels:
      app: app-finalgo

  firebaselicas: 1
  template:
    metadata:
      labels:
        app: app-finalgo

    spec:
      containers:
        - name: app
          image: ghcr.io/imranqutab/go-app:main-a40d3c5
          ports:
            - containerPort: 6500
            
      imagePullSecrets:
      - name: dockerconfigjson-github-com
# appname: app-finalgo
