gitOps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-finalgo
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: finalgo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-finalgo
                port:
                  number: 6500
#end
